# ayautils

./: pyproject.toml
src/ayautils/: AyaUtils.py  __init__.py
tests/: test_ayautils.py
tests/resources/: sample.json
