[tool.poetry]
name = "ayautils"
version = "0.3.3"
description = ""
authors = ["martinjose <josemartin90@gmail.com>"]
readme = "README.md"
packages = [{include = "ayautils", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.2"
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
