[tool.poetry]
name = "ayautils"
version = "0.3.4"
description = ""
authors = ["martinjose <josemartin90@gmail.com>"]
readme = "README.md"
packages = [{include = "ayautils", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
